--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -112,6 +112,7 @@
 @import "components/map.css";
 @import "components/search.css";
 @import "components/top-list.css";
+@import "components/image-gallery.css";
 
 // Import utilities
 @import "icons/icons.css";
