--- a/assets/styles/theme/core/layout/content.less
+++ b/assets/styles/theme/core/layout/content.less
@@ -13,6 +13,7 @@
 // Main wrapper
 .page-container {
     position: relative;
+    min-height: 100vh;
 
     // Desktop view
     @media (min-width: @grid-float-breakpoint) {
