--- a/templates/Includes/rating_table.html.twig
+++ b/templates/Includes/rating_table.html.twig
@@ -31,18 +31,30 @@
             {{ rating.coaster.openingDate is empty ? '-' : rating.coaster.openingDate|date('Y') }}
           </td>
           <td>
-            <div class="rating-coaster"
-                 data-coaster="{{ rating.coaster.id }}"
-                 data-rateit-value="{{ rating.value }}"
-                 {% if not is_granted('update', rating) %}data-rateit-readonly="true"{% endif %}
-                 style="font-size: 22px;"></div>
+            <div class="csrf-protection" data-controller="csrf-protection rating"
+                 data-csrf-protection-token-value="{{ csrf_token('rating') }}"
+                 data-rating-csrf-protection-outlet=".csrf-protection"
+                 data-rating-coaster-id-value="{{ rating.coaster.id }}"
+                 data-rating-current-value-value="{{ rating.value }}"
+                 data-rating-rating-id-value="{{ rating.id }}"
+                 data-rating-locale-value="{{ app.request.locale }}"
+                 {% if not is_granted('update', rating) %}data-rating-readonly-value="true"{% endif %}>
+              <div data-rating-target="rating" style="font-size: 22px;"></div>
+            </div>
           </td>
           <td class="hidden-xs">
             {{ rating.riddenAt is empty ? '-' : rating.riddenAt|format_datetime('short', 'none') }}
           </td>
           {% if is_granted('delete', rating) %}
           <td class="text-center hidden-xs">
-            <a onclick="deleteRating({{ rating.id }}, $(this).closest('tr'));">{{ heroicon('trash', 'w-6 h-6') }}</a>
+            <div data-controller="csrf-protection rating-actions"
+                 data-csrf-protection-token-value="{{ csrf_token('rating') }}"
+                 data-rating-actions-csrf-protection-outlet=".csrf-protection"
+                 data-rating-actions-rating-id-value="{{ rating.id }}"
+                 data-rating-actions-locale-value="{{ app.request.locale }}"
+                 data-rating-actions-mode-value="table">
+              <a href="#" data-action="click->rating-actions#delete" data-rating-actions-target="deleteButton">{{ heroicon('trash', 'w-6 h-6') }}</a>
+            </div>
           </td>
           {% endif %}
         </tr>
