--- a/templates/User/images.html.twig
+++ b/templates/User/images.html.twig
@@ -16,7 +16,8 @@
           {% for image in images %}
             <div class="col-sm-3">
               <a class="m-10" href="{{ pictures_cdn }}/1440x1440/{{ image.filename }}"
-                 data-cropped-thumbnail="{{ pictures_cdn }}/280x210/{{ image.filename }}">
+                 data-cropped-thumbnail="{{ pictures_cdn }}/280x210/{{ image.filename }}"
+                 data-gallery-target="link">
                 <div class="thumb">
                   <img src="{{ pictures_cdn }}/280x210/{{ image.filename }}" alt="{{ image.coaster.name }}">
                 </div>
