--- a/templates/Top/edit-details.html.twig
+++ b/templates/Top/edit-details.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% if create == true %}
-  {% set title = 'top.new.title'|trans %}
-  {% set submitLabel = 'top.new.form.submit' %}
+  {% set title = 'new.title'|trans({}, 'top') %}
+  {% set submitLabel = 'new.form.submit'|trans({}, 'top') %}
 {% else %}
-  {% set title = 'top.editDetails.title'|trans %}
-  {% set submitLabel = 'top.editDetails.form.submit' %}
+  {% set title = 'editDetails.title'|trans({}, 'top') %}
+  {% set submitLabel = 'editDetails.form.submit'|trans({}, 'top') %}
 {% endif %}
 
 {% block title %}{{ title }}{% endblock %}
