--- a/templates/User/tops.html.twig
+++ b/templates/User/tops.html.twig
@@ -13,12 +13,12 @@
       </a>
     </div>
     <div class="media-body media-middle">
-      <h6 class="media-heading text-semibold">{{ 'top.list.infotitle'|trans }}</h6>
-      {{ 'top.list.info'|trans }}
+      <h6 class="media-heading text-semibold">{{ 'list.infotitle'|trans({}, 'top') }}</h6>
+      {{ 'list.info'|trans({}, 'top') }}
     </div>
     <div class="media-right media-middle">
       <a href="{{ path('top_new') }}" class="btn bg-teal-400 btn-lg">{{ heroicon('plus', 'w-6 h-6 position-left') }}
-        {% if tops|length == 0 %}{{ 'top.list.create_first'|trans }}{% else %}{{ 'top.list.create'|trans }}{% endif %}
+        {% if tops|length == 0 %}{{ 'list.create_first'|trans({}, 'top') }}{% else %}{{ 'list.create'|trans({}, 'top') }}{% endif %}
       </a>
     </div>
   </div>
@@ -58,13 +58,13 @@
             </ul>
             <div class="media">
               <a href="{{ path('top_show', {'id': top.id}) }}">
-                {{ heroicon('arrow-right-circle', 'w-6 h-6') }} {{ 'top.list.more'|trans }}
+                {{ heroicon('arrow-right-circle', 'w-6 h-6') }} {{ 'list.more'|trans({}, 'top') }}
               </a>
             </div>
             <ul class="list-inline media">
               <li>{{ heroicon('square-3-stack-3d', 'w-6 h-6 position-left') }} {{ top.topCoasters|length }}</li>
               <li>
-                {{ heroicon('bell-alert', 'w-6 h-6 position-left') }} {{ 'top.list.updated'|trans }} {{ top.updatedAt|ago }}
+                {{ heroicon('clock', 'w-6 h-6 position-left') }} {{ 'list.updated'|trans({}, 'top') }} {{ top.updatedAt|ago }}
               </li>
             </ul>
           </div>
